--- a/web/Admin/AdminPage.html
+++ b/web/Admin/AdminPage.html
@@ -57,6 +57,16 @@
         </tr>
     </div>
     <br />
+    <div>
+        <tr>
+            <td colspan=2>
+                <button onclick="document.location.href='/LogOutServlet'" class="controlButton" >
+                    <h1>Log Out</h1>
+                </button>
+            </td>
+        </tr>
+    </div>
+    <br />
 </div>
 </div>
 
