--- a/web/index.html
+++ b/web/index.html
@@ -2,22 +2,20 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="main_css\styles_for_Main_page.css">
+    <link rel="stylesheet" type="text/css" href="main_css\main_styles.css">
     <title>Welcome page</title>
 </head>
 
-<body>
-    <div class = "pageTitleText">
-        <h5>
+<body class = "backgroungImageMainWelcome">
+    <div class = "pageTitleText pageTitleTextWelcome">
             Welcome to University!
-        </h5>
     </div>
     <br>
 
     <form action="LogIn.jsp" method="get">
         <tr>
             <td >
-                <button onclick="submit" value="Enter" class="controlButton"><h2>Enter</h2></button>
+                <button onclick="submit" value="Enter" class="controlButton controlButtonWelcomePage">Enter</button>
                 <br>
             </td>
         </tr>
