--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,7 @@
 
 <body class = "backgroungImageMainWelcome">
     <div class = "pageTitleText pageTitleTextWelcome">
-            Welcome to University
+            Welcome to Institute
     </div>
     <br>
 
