--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+
 <html>
 <head lang="en">
-    <meta charset="UTF-8">
+    <meta contentType="text/html; charset=UTF-8">
     <link rel="stylesheet" type="text/css" href="main_css\main_styles.css">
     <title>Welcome page</title>
 </head>
