--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -33,8 +33,8 @@
 
         <br>
             <h2>Departments:</h2>
-        <a href="AdditionalInfo/BBE.html">Biotechnology and Biomedical Engineering;</a><br>
-        <a href="AdditionalInfo/FIOT.html">Informatics and Computer Engineering;</a>
+        <a href="BBE.html">Biotechnology and Biomedical Engineering;</a><br>
+        <a href="FIOT.html">Informatics and Computer Engineering;</a>
     </div>
 </body>
 </html>
